--- a/src/html/connection.html
+++ b/src/html/connection.html
@@ -1,5 +1,11 @@
 <section id="connection" class="connection">
   <div class="container">
-    <h2 class="connection__title title"></h2>
+    <h2 class="connection__title title">
+      Умный камин<span class="connection__title-dash"></span>очень умный
+    </h2>
+    <p class="connection__text">
+      Даже если у Вас нет своего решения по умному дому. Мы отлично ладим с
+      Яндекс.Алиса и Mi Home.
+    </p>
   </div>
 </section>
