--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -1,5 +1,27 @@
 <section id="contacts" class="contacts">
   <div class="container">
-    <h2 class="visually-hidden title">Контакты</h2>
+    <h2 class="contacts__title title">связаться с нами</h2>
+    <nav class="footer-nav">
+      <ul class="contacts-list list-style">
+        <li class="contacts-list__item">
+          <p class="contacts-list__text">WatsApp</p>
+          <a href="tel:+79113064144" class="contacts-list__link"
+            >+7911 306 4144
+          </a>
+        </li>
+        <li class="contacts-list__item">
+          <p class="contacts-list__text">Телеграмм</p>
+          <a href="http:/t.me@elite_fire" class="contacts-list__link"
+            >@elite_fire</a
+          >
+        </li>
+        <li class="contacts-list__item">
+          <p class="contacts-list__text">Телеграмм</p>
+          <a href="mailto:info@elite-fire.ru" class="contacts-list__link"
+            >info@elite-fire.ru</a
+          >
+        </li>
+      </ul>
+    </nav>
   </div>
 </section>
