add style to section contacts footer

--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -1,27 +1,56 @@
 <section id="contacts" class="contacts">
   <div class="container">
     <h2 class="contacts__title title">связаться с нами</h2>
-    <nav class="footer-nav">
-      <ul class="contacts-list list-style">
-        <li class="contacts-list__item">
-          <p class="contacts-list__text">WatsApp</p>
-          <a href="tel:+79113064144" class="contacts-list__link"
-            >+7911 306 4144
-          </a>
-        </li>
-        <li class="contacts-list__item">
-          <p class="contacts-list__text">Телеграмм</p>
-          <a href="http:/t.me@elite_fire" class="contacts-list__link"
-            >@elite_fire</a
-          >
-        </li>
-        <li class="contacts-list__item">
-          <p class="contacts-list__text">Телеграмм</p>
-          <a href="mailto:info@elite-fire.ru" class="contacts-list__link"
-            >info@elite-fire.ru</a
-          >
-        </li>
-      </ul>
-    </nav>
+    <div class="contacts__container">
+      <nav class="contacts-nav">
+        <ul class="contacts-list list-style">
+          <li class="contacts-list__item">
+            <p class="contacts-list__text">WatsApp</p>
+            <a href="tel:+79113064144" class="contacts-list__link link"
+              >+7911 306 4144
+            </a>
+          </li>
+          <li class="contacts-list__item">
+            <p class="contacts-list__text">Телеграмм</p>
+            <a
+              href="http:/t.me@elite_fire"
+              class="contacts-list__link link"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >@elite_fire</a
+            >
+          </li>
+          <li class="contacts-list__item">
+            <p class="contacts-list__text">Почта</p>
+            <a
+              href="mailto:info@elite-fire.ru"
+              class="contacts-list__link link contacts-list__link--gold"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >info@elite-fire.ru</a
+            >
+          </li>
+          <li>
+            <p class="contacts-list__text">Наш адрес</p>
+            <a
+              href="https://goo.gl/maps/SzuZ7XhNckwEZdbQ8"
+              class="contacts-list__link contacts-list__link--address link"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Россия, г. Москва, Варшавское шоссе, 170 г
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="contacts-information">
+        <p class="contacts-information__text">Телефон</p>
+        <a href="tel:89113064144" class="contacts-information__link link"
+          >8 911 306 4144</a
+        >
+        <button type="button" class="contacts-information__btn">
+          Связаться с менеджером
+        </button>
+      </div>
+    </div>
   </div>
 </section>
