--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,12 @@
 <footer class="footer">
   <div class="container">
-   
+    <a href="./index.html" class="footer__logo link" aria-label="logo"
+      >Elite Fire</a
+    >
+    <p class="footer__text--date footer__text">2020-2021</p>
+    <p class="footer__text">ООО “МЕТАЛЛЭЛЕКТРОИНВЕСТ”</p>
+    <a href="./index.html" class="footer__link link"
+      >Пользовательское соглашение</a
+    >
   </div>
 </footer>
