fix bag validate

--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -13,7 +13,7 @@
           <li class="contacts-list__item">
             <p class="contacts-list__text">Телеграмм</p>
             <a
-              href="http:/t.me@elite_fire"
+              href="http://t.me@elite_fire"
               class="contacts-list__link link"
               target="_blank"
               rel="noopener noreferrer nofollow"
