--- a/src/html/experience.html
+++ b/src/html/experience.html
@@ -3,28 +3,65 @@
     <h2 class="experience__title title">Есть задача? Есть решение!</h2>
     <ul class="photo-gallery list-style">
       <li class="photo-gallery__item">
-        <img src="@img/exp.jpg" class="photo-gallery__photo" width="370" height="267"></img>
+        <img
+          src="@img/exp.jpg"
+          alt="фото галереи"
+          class="photo-gallery__photo"
+          width="370"
+          height="267"
+        />
       </li>
-		<li class="photo-gallery__item">
-			<img src="@img/exp.jpg" class="photo-gallery__photo" width="370" height="267"></img>
-		 </li>
-		 <li class="photo-gallery__item">
-			<img src="@img/exp.jpg" class="photo-gallery__photo" width="370" height="267"></img>
-		 </li>
+      <li class="photo-gallery__item">
+        <img
+          src="@img/exp.jpg"
+          alt="фото галереи"
+          class="photo-gallery__photo"
+          width="370"
+          height="267"
+        />
+      </li>
+      <li class="photo-gallery__item">
+        <img
+          src="@img/exp.jpg"
+          alt="фото галереи"
+          class="photo-gallery__photo"
+          width="370"
+          height="267"
+        />
+      </li>
     </ul>
     <h2 class="experience__bottom-title title">
-      Почемы мы можем многое?<br> Свои люди. Свои станки. Своя лаборатория
+      Почемы мы можем многое?<br />
+      Свои люди. Свои станки. Своя лаборатория
     </h2>
-	 <ul class="photo-gallery list-style">
+    <ul class="photo-gallery list-style">
       <li class="photo-gallery__item">
-        <img src="@img/exp.jpg" class="photo-gallery__photo" width="370" height="267"></img>
+        <img
+          src="@img/exp.jpg"
+          alt="фото галереи"
+          class="photo-gallery__photo"
+          width="370"
+          height="267"
+        />
       </li>
-		<li class="photo-gallery__item">
-			<img src="@img/exp.jpg" class="photo-gallery__photo" width="370" height="267"></img>
-		 </li>
-		 <li class="photo-gallery__item">
-			<img src="@img/exp.jpg" class="photo-gallery__photo" width="370" height="267"></img>
-		 </li>
+      <li class="photo-gallery__item">
+        <img
+          src="@img/exp.jpg"
+          alt="фото галереи"
+          class="photo-gallery__photo"
+          width="370"
+          height="267"
+        />
+      </li>
+      <li class="photo-gallery__item">
+        <img
+          src="@img/exp.jpg"
+          alt="фото галереи"
+          class="photo-gallery__photo"
+          width="370"
+          height="267"
+        />
+      </li>
     </ul>
   </div>
 </section>
