--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -16,7 +16,7 @@
       <form class="form">
         <label class="form__field">
           <span class="form__label">Выберите длину</span>
-          <div class="form__range-panel">
+          <span class="form__range-panel">
             <span class="form__text">0.5 м</span>
             <input
               type="range"
@@ -28,19 +28,19 @@
               step="0.5"
             />
             <span class="form__text">10 м</span>
-          </div>
+          </span>
         </label>
         <label class="form__field">
           <span class="form__label">Лицевая панель</span>
-          <div class="panel-gallery">
-            <button type="button" class="panel-gallery__btn-input">
+          <span class="panel-gallery">
+            <span class="panel-gallery__btn-input">
               <svg width="18" height="18">
                 <use
                   href="@img/icons/icons.svg#next-left"
                   class="svg-next-left-dims"
                 ></use>
               </svg>
-            </button>
+            </span>
             <input
               type="image"
               id="image"
@@ -48,29 +48,21 @@
               src="@img/panel.jpg"
               class="panel-gallery__input"
             />
-            <button type="button" class="panel-gallery__btn-input">
+            <span class="panel-gallery__btn-input">
               <svg width="18" height="18">
                 <use
                   href="@img/icons/icons.svg#next-right"
                   class="svg-next-right-dims"
                 ></use>
               </svg>
-            </button>
-          </div>
-          <ul class="line-list list-style">
-            <li class="line-list__item">
-              <span class="line-list__dash line-list__dash--accent"></span>
-            </li>
-            <li class="line-list__item">
-              <span class="line-list__dash"></span>
-            </li>
-            <li class="line-list__item">
-              <span class="line-list__dash"></span>
-            </li>
-            <li class="line-list__item">
-              <span class="line-list__dash"></span>
-            </li>
-          </ul>
+            </span>
+          </span>
+          <span class="line-list">
+            <span class="line-list__dash line-list__dash--accent"></span>
+            <span class="line-list__dash"></span>
+            <span class="line-list__dash"></span>
+            <span class="line-list__dash"></span>
+          </span>
         </label>
         <div class="form__field">
           <p class="form__label">дополнительные функции</p>
