fix img on section connection

--- a/src/html/design.html
+++ b/src/html/design.html
@@ -113,7 +113,11 @@
             height="346"
           />
           <div class="design-img__arrow">
-            <button class="design-img__btn">
+            <button
+              class="design-img__btn"
+              type="button"
+              aria-label="кнопка стрелка влево"
+            >
               <svg width="18" height="18">
                 <use
                   href="@img/icons/icons.svg#next-left"
@@ -121,7 +125,11 @@
                 ></use>
               </svg>
             </button>
-            <button type="button" class="design-img__btn">
+            <button
+              type="button"
+              class="design-img__btn"
+              aria-label="кнопка стрелка вправо"
+            >
               <svg width="18" height="18">
                 <use
                   href="@img/icons/icons.svg#next-right"
@@ -146,7 +154,11 @@
             height="346"
           />
           <div class="design-img__arrow">
-            <button class="design-img__btn">
+            <button
+              class="design-img__btn"
+              type="button"
+              aria-label="кнопка стрелка влево"
+            >
               <svg width="18" height="18">
                 <use
                   href="@img/icons/icons.svg#next-left"
@@ -154,7 +166,11 @@
                 ></use>
               </svg>
             </button>
-            <button type="button" class="design-img__btn">
+            <button
+              type="button"
+              class="design-img__btn"
+              aria-label="кнопка стрелка вправо"
+            >
               <svg width="18" height="18">
                 <use
                   href="@img/icons/icons.svg#next-right"
@@ -178,7 +194,11 @@
             height="346"
           />
           <div class="design-img__arrow">
-            <button class="design-img__btn">
+            <button
+              class="design-img__btn"
+              type="button"
+              aria-label="кнопка стрелка влево"
+            >
               <svg width="18" height="18">
                 <use
                   href="@img/icons/icons.svg#next-left"
@@ -186,7 +206,11 @@
                 ></use>
               </svg>
             </button>
-            <button type="button" class="design-img__btn">
+            <button
+              type="button"
+              class="design-img__btn"
+              aria-label="кнопка стрелка вправо"
+            >
               <svg width="18" height="18">
                 <use
                   href="@img/icons/icons.svg#next-right"
